# Lekin_Python

./: pyproject.toml
docs/: API_REFERENCE.md
lekinpy/: job.py  machine.py  schedule.py  system.py
lekinpy/algorithms/: edd.py  fcfs.py  spt.py
